tests/baselines/reference/typesWithDuplicateTypeParameters.errors.txt
typesWithDuplicateTypeParameters.ts(1,12): error TS2300: Duplicate identifier 'T'.
typesWithDuplicateTypeParameters.ts(2,16): error TS2300: Duplicate identifier 'T'.
typesWithDuplicateTypeParameters.ts(4,16): error TS2300: Duplicate identifier 'T'.
typesWithDuplicateTypeParameters.ts(5,20): error TS2300: Duplicate identifier 'T'.
typesWithDuplicateTypeParameters.ts(7,15): error TS2300: Duplicate identifier 'T'.
typesWithDuplicateTypeParameters.ts(8,19): error TS2300: Duplicate identifier 'T'.


==== typesWithDuplicateTypeParameters.ts (6 errors) ====
    class C<T, T> { }
               ~
!!! error TS2300: Duplicate identifier 'T'.
    class C2<T, U, T> { }
                   ~
!!! error TS2300: Duplicate identifier 'T'.
    
    interface I<T, T> { }
                   ~
!!! error TS2300: Duplicate identifier 'T'.
    interface I2<T, U, T> { }
                       ~
!!! error TS2300: Duplicate identifier 'T'.
    
    function f<T, T>() { }
                  ~
!!! error TS2300: Duplicate identifier 'T'.
    function f2<T, U, T>() { }
                      ~
!!! error TS2300: Duplicate identifier 'T'.